# rmk-pico2w-ferris-sweep

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Embed.toml  Makefile.toml  README.md  build.rs  issue.md  keyboard-left.toml  keyboard-minimum.toml  keyboard-right.toml  keyboard.toml  pin.md  plan.md  probrem.md  rust-toolchain.toml  vial.json
.cargo/: config.toml
rmk-driver-azoteq-iqs5xx/: Cargo.toml  README.md
rmk-driver-azoteq-iqs5xx/examples/: embassy_rp_pico2w.rs  raw_driver.rs  rmk_integration.rs
rmk-driver-azoteq-iqs5xx/src/: lib.rs  registers.rs
scripts/: cleanup-debug-rmk.patch  cleanup-debug-root.patch  cleanup-debug.sh  setup-probe-rs-udev.sh
src/: simple_central.rs  simple_peripheral.rs
