[package]
name = "rmk-pico2w-ferris-sweep"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-futures = "0.1"
embassy-sync = { version = "0.7", features = ["defmt"] }
trouble-host = { version = "0.5.1", features = ["gatt", "scan", "derive", "security"] }
rmk = { path = "./rmk/rmk", features = ["pico_w_ble", "async_matrix", "split", "storage"] }
embassy-time = { version = "0.5", features = ["defmt"] }
# RP2350 (Pico 2 W) 対応のため embassy-rp 0.9 系に揃える
embassy-rp = { version = "0.9", features = [
    "rp235xa",
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1.11", features = ["critical-section"] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
# embassy-rp 0.9 系に合わせて cyw43 / cyw43-pio を更新
cyw43 = { version = "0.6", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.9", features = ["defmt"] }
static_cell = "2"
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

[features]
# skip download of CYW43 firmware(Pico 2 W に載っている CYW43（Wi‑Fi/BLE チップ）
skip-cyw43-firmware = []
# avoid having to use --allow-multiple-definition linker flag
# on macOS with Apple Silicon at least
# default = ["rp-pico/disable-intrinsics"]

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"
reqwest = { version = "0.12.9", features = ["blocking"]}

# Split keyboard example
[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[[bin]]
name = "simple_central"
path = "src/simple_central.rs"

[[bin]]
name = "simple_peripheral"
path = "src/simple_peripheral.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

# Pico W 系は RMK 公式ガイドで Embassy の特定コミット固定が必要とされているため
# (crates.io 未反映の修正を使う目的で patch.crates-io を指定)
# 今回は crates.io の版で動作したので一旦無効化
#[patch.crates-io]